syntax = "proto3";

package golem;


enum WorkerStatus {
  RUNNING = 0;
  IDLE = 1;
  SUSPENDED = 2;
  INTERRUPTED = 3;
  RETRYING = 4;
  FAILED = 5;
  EXITED = 6;
}
